package org.bsbo.dao.impl;

import org.bsbo.dao.KanbanDeskDao;
import org.bsbo.domain.KanbanDesk;

public class KanbanDeskDaoImpl implements KanbanDeskDao {
    @Override
    public KanbanDesk findById(long id) {
        return null;
    }
}
