package org.bsbo.dao.impl;

import org.bsbo.dao.TaskDao;
import org.bsbo.domain.Task;
import org.bsbo.domain.User;

public class TaskDaoImpl implements TaskDao {
    @Override
    public Task findById(long id) {
        return null;
    }
    @Override
    public Task save(Task task) {
        return null;
    }
    @Override
    public Task markAsDoneBy(Task task, User user) {
        return null;
    }
}
