package org.bsbo.domain;

public class Specialization extends AbstractEntity {
    private String name;
    public String getName() {
        return name;
    }
    public void setName(String name) {
        this.name = name;
    }
}
