@startuml classes
abstract class AbstractEntity
{
    - long id;
    + long getId()
    + void setId(long id)
}
class User
{
    - String firstName
    - String lastName
    - String middleName
    - String email
    - String password
    - Role role
    - List<Specialization> Specialization
    + String getFirstName()
    + void setFirstName(String firstName)
    + String getLastName()
    + void setLastName(String lastName)
    + String getMiddleName()
    + void setMiddleName(String middleName)
    + String getEmail()
    + void setEmail(String email)
    + String getPassword()
    + void setPassword(String password)
    + Role getRole()
    + void setRole(Role role)
}
class UserDto
{
    - String firstName
    - String lastName
    - String middleName
    - String email
    - Role role
    - List<Specialization> Specialization
    + String getFirstName()
    + void setFirstName(String firstName)
    + String getLastName()
    + void setLastName(String lastName)
    + String getMiddleName()
    + void setMiddleName(String middleName)
    + String getEmail()
    + void setEmail(String email)
    + Role getRole()
    + void setRole(Role role)
}
class Role
{
    - String name
    + String getName()
    + void setName()
}
class Project
{
    - String name
    - String projectGoal
    - Date deadline
    - String customer
    - KanbanDesk kanbanDesk
    - List<User> users
    - User user
    + String getName()
    + void setName()
    + String getProjectGoal()
    + void setProjectGoal(String projectGoal)
    + Date getDeadline()
    + void setDeadline(Date date)
    + String getCustomer()
    + void setCustomer(String customer)
    + KanbanDesk getKanbanDesk()
    + void setKanbanDesk(KanbanDesk kanbanDesk)
    + List<User> getUsers()
    + void setUsers(List<User> users)
    + User getUser()
    + void setUser(User user)
}
class ProjectDto
{
    - String name
    - String projectGoal
    - Date deadline
    - String customer
    - KanbanDeskDto kanbanDesk
    + String getName()
    + void setName()
    + String getProjectGoal()
    + void setProjectGoal(String projectGoal)
    + Date getDeadline()
    + void setDeadline(Date date)
    + String getCustomer()
    + void setCustomer(String customer)
    + KanbanDeskDto getKanbanDesk()
    + void setKanbanDesk(KanbanDeskDto kanbanDesk)
}
class TaskStatus
{
    - String name
    + String getName()
    + void setName()
}
class Task
{
    - TaskStatus taskStatus
    - String description
    - User completedBy
    + TaskStatus getTaskStatus()
    + void setTaskStatus(TaskStatus taskStatus)
    + String getDescription()
    + void setDescription(String description)
    + bool isCompleted()
    + User getCompletedBy()
    + void setCompletedBy(User user)
}
class TaskDto
{
    - TaskStatus taskStatus
    - String description
    - List<UserDto> users
    + TaskStatus getTaskStatus()
    + void setTaskStatus(TaskStatus taskStatus)
    + String getDescription()
    + void setDescription(String description)
    + List<User> getUsers()
    + void setUsers(List<UserDto> users)   
}
class KanbanDesk
{
    - int sprintNumber
    - Date sprintStartDate
    - Date sprintEndDate
    - List<Task> tasks
    + int getSprintNumber()
    + void setSprintNumber(int sprintNumber)
    + Date getSprintStartDate()
    + void setSprintStartDate(Date sprintStartDate)
    + Date getSprintEndDate()
    + void setSprintEndDate(Date sprintEndDate)
    + List<Task> getTasks()
    + void setTasks(List<Task> tasks)
}
class KanbanDeskDto
{
    - int sprintNumber
    - Date sprintStartDate
    - Date sprintEndDate
    - List<TaskDto> tasks
    + int getSprintNumber()
    + void setSprintNumber(int sprintNumber)
    + Date getSprintStartDate()
    + void setSprintStartDate(Date sprintStartDate)
    + Date getSprintEndDate()
    + void setSprintEndDate(Date sprintEndDate)
    + List<TaskDto> getTasks()
    + void setTasks(List<TaskDto> tasks) 
}
class Report
{
    - User user
    - KanbanDesk kanbanDesk
    - List<Task> tasks
    - String message
    + User getUser()
    + void setUser(User user)
    + KanbanDesk getKanbanDesk()
    + void setKanbanDesk(KanbanDesk kanbanDesk)
    + List<Task> getTasks()
    + void setTasks(List<Task> tasks)
    + String getMessage()
    + void setMessage(String message)
}
class ReportDto
{
    - UserDto user
    - KanbanDeskDto kanbanDesk
    - List<TaskDto> tasks
    - String message
    + UserDto getUser()
    + void setUser(UserDto user)
    + KanbanDeskDto getKanbanDesk()
    + void setKanbanDesk(KanbanDeskDto kanbanDesk)
    + List<TaskDto> getTasks()
    + void setTasks(List<TaskDto> tasks)
    + String getMessage()
    + void setMessage(String message)
}
class Specialization
{
    - String name
    + String getName()
    + void setName()
}
interface TaskDao
{
    + Task findById(long id)
    + Task save(Task task)
    + Task markAsDoneBy(Task task, User user)
}
interface ProjectDao
{
    + Project save(Project project)
    + Project getProjectStatistics(long id)
    + List<Task> getAllUncompletedTasks(Project project)
    + List<Report> getUserMessages(long userId)
    + List<Report> getAllMessages()
}
interface KanbanDeskDao
{
    + findById(long id)
}
interface ReportDao
{
    + createMessageForReport(ReportDto reportDto)
}
interface UserDao
{
    + User findById(long id)
}
class UserDaoImpl
{

}
class ReportDaoImpl
{

}
interface KanbanDeskDaoImpl
{

}
class TaskDaoImpl
{

}
class ProjectDaoImpl
{

}
class StatisticsController
{
    
}
class TaskController
{
    - TaskManagerService taskManagerService
    + TaskController(TaskManagerService taskManagerService)
    + ResponseEntity<TaskDto> updateTask(TaskDto taskDto)
}
class ProjectController
{
    - ProjectManagerService projectManagerService
    + ResponseEntity<ProjectDto> createOrUpdateProject(ProjectDto projectDto)
    + ResponseEntity<ProjectDto> update
}
class ReportController
{
    - ReportManageService reportManageService
    + ReportDto createReport()
}
interface ReportManageService 
{
    + ReportDto saveReport(ReportDto reportDto)
}
interface TaskManagerService
{
    + TaskDto updateTask(TaskDto taskDto)
}
interface ProjectManagerService
{
    + ProjectDto createOrUpdateProject(ProjectDto projectDto)
}
interface ProjectAccessManagementService
{
    + isProjectWorker(User user, Project project)
}
class ReportManageServiceImpl
{
    - TaskDao taskDao
    - ReportDao reportDao
    + ReportManageServiceImpl(TaskDao taskDao, ReportDao reportDao)
}
class TaskManagerServiceImpl
{
    - TaskDao taskDao
    + TaskManagerServiceImpl(TaskDao taskDao)
}
' interface ReportManageServiceImpl
' {
'     - ReportDao reportDao
'     + ReportManageServiceImpl(ReportDao reportDao)
' }
class ProjectManagerServiceImpl
{
    - ProjectDao projectDao
    + ProjectManagerServiceImpl(ProjectDao projectDao)
}

ReportManageService ..> ReportDto
ReportDao ..> Report
StatisticsController ..> TaskDao
StatisticsController ..> ProjectDao
ReportController ..> ProjectAccessManagementService
KanbanDeskDaoImpl --|> KanbanDeskDao
ReportDaoImpl --|> ReportDao
KanbanDeskDao ..> KanbanDesk
ReportDto ..> Report
User --|> AbstractEntity
Project --|> AbstractEntity
TaskStatus --|> AbstractEntity
Task --|> AbstractEntity
KanbanDesk --|> AbstractEntity
Report --|> AbstractEntity
Specialization --|> AbstractEntity
Role --|> AbstractEntity
User --o Task
Report --o KanbanDesk
User --o Specialization
User --o Role
Report --o Task
Report --o User
KanbanDesk --* Project
Task --* KanbanDesk
UserDto --o Specialization
UserDto --o Role
TaskDto --o UserDto
TaskDaoImpl ..|> TaskDao
TaskDao ..> Task
UserDaoImpl ..|> UserDao
UserDao ..> User
TaskManagerServiceImpl ..|> TaskManagerService
TaskController ..> TaskManagerService
TaskController ..> TaskDto
TaskManagerServiceImpl ..> TaskDao
TaskManagerService ..> TaskDto
ProjectDto  --o KanbanDeskDto
KanbanDeskDto --o TaskDto
ProjectController --> ProjectDto
ProjectController --> ProjectManagerService
ProjectManagerServiceImpl --> ProjectDao
ProjectDao --> Project
ProjectManagerServiceImpl ..|> ProjectManagerService
ProjectDaoImpl ..|> ProjectDao
ProjectManagerService --> ProjectDto
ReportManageServiceImpl ..|> ReportManageService
ReportManageServiceImpl ..> ReportDao
ReportController ..> ReportManageService


@enduml